fix page overflow bug and create like ts api

--- a/frontend/src/components/layout/Page.module.css
+++ b/frontend/src/components/layout/Page.module.css
@@ -24,16 +24,13 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    max-width: calc(100% - max(14%, 200px));
 }
 
 .content {
     flex-grow: 1;
     height: 100%;
     overflow: hidden;
-}
-
-.overflowScroll {
-    overflow-y: scroll;
 }
 
 #thinNavbar {
